--- a/index.html
+++ b/index.html
@@ -15,13 +15,6 @@
     <body>
 
         <header>
-            <!-- TODO: Create an elegant header using either one of the images
-                 or the video loop included in this repository. Make sure the
-                 page navigation is presented clearly and in a user-friendly
-                 way. Also, be sure to choose the proper image format as you
-                 insert backgrounds and other images into the page. Balance
-                 image quality with file size to achieve the best user
-                 experience. -->
             <h1>Monkaa</h1>
             <p class="subtitle">An open source short film</p>
             <nav>
@@ -50,8 +43,14 @@
 
         <section id="watch">
             <h2>Watch</h2>
-            <!-- TODO: Embed the .webm and .mp4 video with full controls for a
-                 convenient and attractive video viewing experience. -->
+          <section id="watch">
+   <center>
+     <h2>Watch</h2>
+     <video controls poster="media/video/video_poster.png" width="320" height="240">
+           <source src="media/video/munkaa.mp4" type=video/mp4>
+           <source src="media/video/monkaa_1080p.webm" type=video/webm>
+         </video>
+   </center>
 
             <!-- TODO: Style an elegant download link to download the video. -->
             <h3>Download the video</h3>
@@ -65,8 +64,8 @@
 
         <section id="listen">
             <h2>Listen</h2>
-            <!-- TODO: Embed an audio player so users can play back the
-                 soundtrack MP3 directly on the page. -->
+            <p>
+           
 
             <!-- TODO: Style an elegant download link to download the video. -->
             <p>
